Fix most of the failed unit tests